tests/NormalTests/paczka1/small_fuzzy/69783550.err
Error in line 4: Fx7ro A186 96,2
Error in line 6: Fx7ro S248 51,4
